# reduction

./: AUTHORS  CHANGEME  INSTALL  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  create_bootstrap  scl_spec.in
array_manip/src/: Makefile.am  abs_val.hpp  add_ncerr.cpp  add_ncerr.hpp  add_scalar_vec_ncerr.cpp  add_vec_vec_ncerr.cpp  add_vec_vec_ncerr.hpp  check_inputs.cpp  check_sizes_2in1out.cpp  check_sizes_2in1out.hpp  div_ncerr.cpp  div_ncerr.hpp  div_scalar_vec_ncerr.cpp  div_scalar_vec_ncerr.hpp  div_vec_scalar_ncerr.cpp  div_vec_scalar_ncerr.hpp  div_vec_vec_ncerr.cpp  div_vec_vec_ncerr.hpp  mult_ncerr.cpp  mult_ncerr.hpp  mult_scalar_vec_ncerr.cpp  mult_scalar_vec_ncerr.hpp  mult_vec_vec_ncerr.cpp  mult_vec_vec_ncerr.hpp  sub_ncerr.cpp  sub_ncerr.hpp  sub_scalar_vec_ncerr.cpp  sub_scalar_vec_ncerr.hpp  sub_vec_vec_ncerr.cpp  sub_vec_vec_ncerr.hpp  sumw_ncerr.cpp  sumw_ncerr.hpp  sumw_vec_vec_ncerr.cpp  sumw_vec_vec_ncerr.hpp
array_manip/test/cpp/: Makefile.am  add_ncerr_test.cpp  add_scalar_vec_ncerr_test.cpp  add_vec_vec_ncerr_test.cpp  div_ncerr_test.cpp  div_scalar_vec_ncerr_test.cpp  div_vec_scalar_ncerr_test.cpp  div_vec_vec_ncerr_test.cpp  mult_ncerr_test.cpp  mult_scalar_vec_ncerr_test.cpp  mult_vec_vec_ncerr_test.cpp  sub_ncerr_test.cpp  sub_scalar_vec_ncerr_test.cpp  sub_vec_vec_ncerr_test.cpp  sumw_ncerr_test.cpp  sumw_vec_vec_ncerr_test.cpp  test_common.hpp  testsuite.at
axis_manip/test/cpp/: Makefile.am  d_spacing_to_tof_focused_det_test.cpp  energy_to_wavelength_test.cpp  energy_transfer_test.cpp  frequency_to_energy_test.cpp  init_scatt_wavevector_to_Q_test.cpp  init_scatt_wavevector_to_scalar_Q_test.cpp  rebin_axis_1D_frac_test.cpp  rebin_axis_1D_test.cpp  reverse_array_cp_test.cpp  reverse_array_nc_test.cpp  test_common.hpp  testsuite.at  tof_to_final_velocity_dgs_test.cpp  tof_to_initial_wavelength_igs_test.cpp  tof_to_scalar_Q_test.cpp  tof_to_wavelength_lin_time_zero_test.cpp  tof_to_wavelength_test.cpp  wavelength_to_energy_test.cpp  wavelength_to_scalar_Q_test.cpp  wavelength_to_scalar_k_test.cpp  wavelength_to_tof_test.cpp  wavelength_to_velocity_test.cpp
bindings/: Makefile.am  NessiVector.py  NessiVectorManual  NessiVectorUtils.py  array_manip.i  array_manip.py  axis_manip.i  axis_manip.py  nessi_list.py  nessi_vector.i  nessi_vector.py  phys_corr.i  phys_corr.py  sns_common_libs.pth  utils.i  utils.py  vector.i  vpair.i
bindings/examples/: run_array_manip.py  run_axis_manip.py
bindings/test/: test_array_manip.py  test_array_manip_bind.py  test_common_bind.py  test_utils_bind.py
bindings/test/PAL/: add_ncerr_test.py  d_spacing_to_tof_focused_det_test.py  div_ncerr_test.py  energy_transfer_test.py  frequency_to_energy_test.py  init_scatt_wavevector_to_Q_test.py  init_scatt_wavevector_to_scalar_Q_test.py  mult_ncerr_test.py  rebin_axis_1D_frac_test.py  rebin_axis_1D_test.py  rebin_axis_2D_test.py  reverse_array_cp_test.py  reverse_array_nc_test.py  runall_pal.sh  sub_ncerr_test.py  sumw_ncerr_test.py  test_common.py  tof_to_initial_wavelength_igs_test.py  tof_to_scalar_Q_test.py  tof_to_wavelength_test.py  wavelength_to_energy_test.py  wavelength_to_scalar_Q_test.py  wavelength_to_scalar_k_test.py  weighted_average_test.py
bindings/test/PBL/: runall_pbl.sh  test_add_ncerr.py  test_common_bind.py  test_convex_polygon_intersect.py  test_d_spacing_to_tof_focused_det.py  test_div_ncerr.py  test_energy_transfer.py  test_init_scatt_wavevector_to_scalar_Q.py  test_integrate_1D_hist.py  test_mult_ncerr.py  test_rebin_2D_quad_to_rectlin.py  test_rebin_axis_1D.py  test_rebin_axis_1D_frac.py  test_rebin_axis_2D.py  test_reverse_array_cp.py  test_reverse_array_nc.py  test_sub_ncerr.py  test_sumw_ncerr.py  test_tof_to_final_velocity_dgs.py  test_tof_to_initial_wavelength_igs.py  test_tof_to_scalar_Q.py  test_tof_to_wavelength.py  test_velocity_to_energy.py  test_wavelength_to_energy.py  test_wavelength_to_scalar_Q.py  test_wavelength_to_scalar_k.py  test_wavelength_to_tof.py  test_weighted_average.py
doc/: Makefile.am  index.html  install  makepdf  scl_cpp.cfg  sns_dr_lib.cfg
doc/tutorials/: pal_nv_tutorial.html
tags/1.0.0iqc1/doc/: Makefile.am  install  sns_dr_lib.cfg
tags/V1.0.0alpha/doc/: Makefile.am  makepdf  sns_dr_lib.cfg
trunk/: AUTHORS  COPYING  Makefile.am  NEWS  README  README.developers  README.release_instructions  acinclude.m4  autogen.sh  autoversion.sh  configure.ac  scl_spec.in
trunk/array_manip/: Makefile.am
trunk/array_manip/inc/: Makefile.am  arith.hpp  check_inputs.hpp  vec_vec_arith.hpp
trunk/array_manip/src/: Makefile.am  add_ncerr.cpp  add_ncerr.hpp  add_scalar_vec_ncerr.cpp  add_scalar_vec_ncerr.hpp  add_vec_vec_ncerr.cpp  add_vec_vec_ncerr.hpp  check_sizes_2in1out.cpp  check_sizes_2in1out.hpp  div_ncerr.cpp  (+19 more)
trunk/bindings/: Makefile.am  NessiVector.py  NessiVectorManual  NessiVectorUtils.py  array_manip.i  array_manip.py  axis_manip.i  axis_manip.py  libexcept.i  nessi_list.py  nessi_vector.i  nessi_vector.py  phys_corr.i  phys_corr.py  tutorial.html  utils.i  utils.py  vpair.i
trunk/doc/: Makefile.am  index.html  install  makepdf  scl_python.cfg  sns_dr_lib.cfg
trunk/nessi/: Makefile.am  libinfo.hpp
trunk/phys_corr/: Makefile.am
utils/src/: Makefile.am  advance_edge.hpp  aims_at.hpp  bisect_helper.cpp  calc_area_2D_polygon.hpp  calc_bin_centers.hpp  calc_bin_widths.hpp  check_convex_polygon.cpp  check_convex_polygon.hpp  check_histo_sizes.cpp  check_histo_sizes.hpp  check_sizes_square.cpp  check_sizes_square.hpp  compare.cpp  compare.hpp  convex_polygon_intersect.hpp  crossing_pt.cpp  crossing_pt.hpp  dot_product.hpp  eval_linear_fit.cpp  eval_linear_fit.hpp  fd_comparison.cpp  fd_comparison.hpp  fit_linear_background.cpp  fit_linear_background.hpp  fit_reflectometer_background.cpp  fix_index.cpp  integrate_1D_hist.cpp  integrate_1D_hist.hpp  is_equals.cpp  is_equals.hpp  iu_comparison.cpp  iu_comparison.hpp  linear_order_jacobian.cpp  linear_order_jacobian.hpp  matrix_multiplication.cpp  matrix_multiplication.hpp  peak_integration.cpp  peak_integration.hpp  pt_in_convex_polygon.hpp  (+6 more)
(+1409 files in other folders)
