# _*_ make _*_
# $Id$

AM_CPPFLAGS = -I. -I$(top_srcdir)/array_manip/inc -I$(top_srcdir)/nessi

lib_LTLIBRARIES = libArrayManip.la

libArrayManip_la_LDFLAGS = -version-info 1:0:0

libArrayManip_la_SOURCES = \
	add_ncerr.cpp \
	add_ncerr.hpp \
	check_sizes_2in1out.cpp \
	check_sizes_2in1out.hpp \
        div_ncerr.cpp \
        div_ncerr.hpp \
        mult_ncerr.cpp \
        mult_ncerr.hpp \
        sub_ncerr.cpp \
        sub_ncerr.hpp \
        sumw_ncerr.cpp \
        sumw_ncerr.hpp
